[package]
name = "test-with-other-payer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.6.9"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"
rand = "0.7.3"
bumpalo = { version = "3.4.0", features = ["collections"] }
safe-transmute = "0.11.0"

[lib]
crate-type = ["cdylib", "lib"]